--- a/scrimba/css/basic.css
+++ b/scrimba/css/basic.css
@@ -26,3 +26,8 @@ html, body {
 .container > div:nth-child(4n) {
       background-color: #ffcc5c;
 }
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
