Make height of container 100%

--- a/scrimba/css/basic.css
+++ b/scrimba/css/basic.css
@@ -8,7 +8,10 @@
 
 html, body {
   background-color: #ffeead;
-  margin: 10px;
+  box-sizing: border-box;
+  height: 100%;
+  padding: 10px;
+  margin: 0px;
 }
 
 .container > div:nth-child(1n) {
