--- a/scrimba/css/simple-template.css
+++ b/scrimba/css/simple-template.css
@@ -1,17 +1,18 @@
 .container {
+    height: 100%;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: 40px 200px 40px;
+    grid-template-rows: 40px auto 40px;
 }
 
 .header {
     /* grid-row: 1; */
-    grid-column: 1 / 9;
+    grid-column: 1 / -1;
 }
 
 .menu {
     grid-column: 9 / -1;
-    grid-row: 1 / 4;
+    grid-row: 2;
 }
 
 .content {
@@ -20,5 +21,5 @@
 
 .footer {
     /* grid-row: 3 / -1; */
-    grid-column: 1 / 9;
+    grid-column: 1 / -1;
 }
