--- a/scrimba/css/simple-template.css
+++ b/scrimba/css/simple-template.css
@@ -3,23 +3,24 @@
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: 40px auto 40px;
+    grid-template-areas: 
+        ". . h h  h h h h  h h h ."
+        "m m c c  c c c c  c c c c"
+        ". . f f  f f f f  f f f .";
 }
 
 .header {
-    /* grid-row: 1; */
-    grid-column: 1 / -1;
+    grid-area: h;
 }
 
 .menu {
-    grid-column: 9 / -1;
-    grid-row: 2;
+    grid-area: m;
 }
 
 .content {
-    grid-column: 1 / 9;
+    grid-area: c;
 }
 
 .footer {
-    /* grid-row: 3 / -1; */
-    grid-column: 1 / -1;
+    grid-area: f;
 }
