--- a/scrimba/css/index.css
+++ b/scrimba/css/index.css
@@ -1,6 +1,7 @@
 .container {
     display: grid;
-    grid-template-columns: 2fr 1fr 3fr;
-    grid-template-rows: 1fr 2fr;
-    gap: .5em;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    /* grid-template-rows: repeat(2, 100px); */
+    grid-auto-rows: 100px;
+    gap: 5px;
 }
