--- a/scrimba/css/image-grid.css
+++ b/scrimba/css/image-grid.css
@@ -1,5 +1,7 @@
 .container {
     display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    grid-auto-rows: 100px;
 }
 
 img {
