--- a/scrimba/css/image-grid.css
+++ b/scrimba/css/image-grid.css
@@ -1,7 +1,8 @@
 .container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-    grid-auto-rows: 100px;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    grid-auto-rows: 75px;
+    gap: 5px;
 }
 
 img {
