--- a/scrimba/css/image-grid.css
+++ b/scrimba/css/image-grid.css
@@ -2,11 +2,19 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     grid-auto-rows: 75px;
+    grid-auto-flow: dense;
     gap: 5px;
 }
 
-img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+.horizontal {
+    grid-column: auto / span 2;
+}
+
+.vertical {
+    grid-row: span 2;
+}
+
+.big {
+    grid-row: span 2;
+    grid-column: span 2;
 }
