--- a/scrimba/css/simple-template.css
+++ b/scrimba/css/simple-template.css
@@ -1,6 +1,30 @@
 .container {
     height: 100%;
     display: grid;
+    grid-template-columns: [main-start] 1fr [content-start] 5fr [content-end main-end];
+    grid-template-rows: [main-start] 40px [content-start] auto [content-end] 40px [main-end];
+}
+
+.header {
+    grid-column: main-start / main-end;
+}
+
+.menu {
+    
+}
+
+.content {
+    grid-column: content-start / content-end;
+}
+
+.footer {
+    grid-column: main-start / main-end;
+}
+
+
+/* .container {
+    height: 100%;
+    display: grid;
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: 40px auto 40px;
     grid-template-areas: 
@@ -23,4 +47,4 @@
 
 .footer {
     grid-area: f;
-}
+} */
