--- a/scrimba/css/index.css
+++ b/scrimba/css/index.css
@@ -1,6 +1,28 @@
+/* ====================
+    AUTO-FIT & MINMAX()
+   ====================
+*/
+
 .container {
+    display: grid;
+    height: 100%;
+    border: 1px solid black;
+    grid-template-columns: repeat(3, 100px);
+    grid-template-rows: repeat(2, 100px);
+    gap: 5px;
+    justify-content: center;
+    align-content: center;
+}
+
+
+/* ====================
+    AUTO-FIT & MINMAX()
+   ====================
+*/
+
+/* .container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     grid-auto-rows: 100px;
     gap: 5px;
-}
+} */
