--- a/scrimba/css/simple-template.css
+++ b/scrimba/css/simple-template.css
@@ -1,3 +1,8 @@
+/* ===================
+       NAMED-LINES
+   ===================
+*/
+
 .container {
     height: 100%;
     display: grid;
@@ -21,6 +26,11 @@
     grid-column: main-start / main-end;
 }
 
+
+/* ===================
+   GRID-TEMPLATE-AREAS
+   ===================
+*/
 
 /* .container {
     height: 100%;
